syntax = "proto3";

package file;

option go_package = "./pb";

message ListFilesRequest{};

message ListFileResponse{
  repeated string filenames = 1;
};

service FileService{
  rpc ListFiles (ListFilesRequest) returns (ListFileResponse);
}